--- a/cadastro/templates/cadastro/ver_imovel.html
+++ b/cadastro/templates/cadastro/ver_imovel.html
@@ -22,4 +22,7 @@
 
 
 </dl>
+<form method="get" action="{% url 'gera_docx' imovel.id%}">
+         <button type="submit" class="btn btn-primary">Gerar</button>
+</form>
 {%endblock%}
