--- a/accounts/templates/accounts/cadastro_usuario.html
+++ b/accounts/templates/accounts/cadastro_usuario.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 
-{% block titulo %} | Cadastro de <usuario></usuario>{% endblock %}
+{% block titulo %} | Cadastro{% endblock %}
 
 {% block corpo %}
 <h1 class="mt-3 mb-3">Cadastro</h1>
@@ -11,14 +11,6 @@
   <div class="form-group">
     <label>Nome</label>
     <input type="text" name="nome" value="{{request.POST.nome}}" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Sobrenome</label>
-    <input type="text" name="sobrenome" value="{{request.POST.sobrenome}}" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Email</label>
-    <input type="email" name="email" value="{{request.POST.email}}" class="form-control">
   </div>
   <div class="form-group">
     <label>Usuário</label>
